# A3-hcds-hcc-bias

./: A3_Wikipedia_ORES_Bias.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: A3_Wikipedia_ORES_Bias-checkpoint.ipynb
data_clean/: politician_data_no_scores.csv  politician_data_with_scores.csv  politicians_by_country.csv
data_raw/: export_2019.csv
data_result/: Top_10_countries_by_coverage.csv
