[tool.poetry]
name = "hcds-winter-2020"
version = "0.1.0"
description = ""
authors = ["aschlegel <alexa.schlegel@fu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
requests = "^2.24.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
altair = "^4.1.0"
bs4 = "^0.0.1"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
